# nfx-stringbuilder

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  TODO.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-linux-clang.yml  build-linux-gcc.yml  build-windows-mingw.yml  build-windows-msvc.yml  codeql.yml  documentation.yml  release.yml
benchmark/: BM_Comparative.cpp  BM_Data.h  BM_StringBuilder.cpp  BM_StringBuilder_Advanced.cpp  BM_StringBuilder_Core.cpp  BM_StringBuilder_Join.cpp  BM_StringBuilder_Lines.cpp  CMakeLists.txt  README.md
benchmark/comparative/: BM_StringBuilder_Comparative.cpp  CMakeLists.txt  README.md
cmake/: nfx-stringbuilder-config.cmake.in  nfxStringBuilderBuildConfig.cmake  nfxStringBuilderDependencies.cmake  nfxStringBuilderInstall.cmake  nfxStringBuilderPackaging.cmake  nfxStringBuilderSources.cmake  nfxStringBuilderTargets.cmake  nfxStringBuilderVersion.rc.in
doc/: CMakeLists.txt
include/nfx/detail/string/: StringBuilder.inl
include/nfx/string/: StringBuilder.h
samples/: CMakeLists.txt  Sample_StringBuilder.cpp
src/: DynamicStringBufferPool.cpp  DynamicStringBufferPool.h  StringBuilder.cpp
test/: CMakeLists.txt  TESTS_StringBuilder.cpp  Tests_StringBuilder.cpp
